--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "svelteskeleton",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev --port 3001",
+		"dev": "svelte-kit dev --port 3001 --host",
 		"build": "svelte-kit build",
 		"package": "svelte-kit package",
 		"preview": "svelte-kit preview --port 3005",
@@ -12,7 +12,8 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"prepare": "npm run smui-theme-light && npm run smui-theme-dark && svelte-kit sync",
 		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
-		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
+		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark",
+		"android:dev": "npx cap sync && npx cap copy && npx cap open android && npm run dev"
 	},
 	"devDependencies": {
 		"@material/typography": "^13.0.0",
@@ -33,6 +34,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@capacitor/android": "^3.4.3",
+		"@capacitor/cli": "^3.4.3",
+		"@capacitor/core": "^3.4.3",
+		"@capacitor/geolocation": "^1.3.1",
 		"@sveltejs/adapter-static": "^1.0.0-next.29",
 		"axios": "^0.26.1"
 	}
